Problem snapping with "Project onto Self" on a curve with generated geometry #77946

Closed
opened 2020-06-17 09:46:21 +02:00 by LHP · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.97

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: aed11c673e
Worked: (newest version of Blender that worked as expected)

Short description of error
Solid Curve Snapping Issue
{F8627344 , media="video"}

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.97 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: `aed11c673e` Worked: (newest version of Blender that worked as expected) **Short description of error** Solid Curve Snapping Issue {[F8627344](https://archive.blender.org/developer/F8627344/2020-06-17_00-41-05.mp4) , media="video"} **Exact steps for others to reproduce the error** - Open attached file - Move the selected curve handle [Solid_Curve_Snapping_Issue.blend](https://archive.blender.org/developer/F8631527/Solid_Curve_Snapping_Issue.blend)
Author

Added subscriber: @asuralhp

Added subscriber: @asuralhp

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Thanks for the report.
Could you provide the *.blend file demonstrating this problem?

Thanks for the report. Could you provide the *.blend file demonstrating this problem?
Author

In #77946#957175, @mano-wii wrote:
Thanks for the report.
Could you provide the *.blend file demonstrating this problem?

Solid_Curve_Snapping_Issue.blend

> In #77946#957175, @mano-wii wrote: > Thanks for the report. > Could you provide the *.blend file demonstrating this problem? [Solid_Curve_Snapping_Issue.blend](https://archive.blender.org/developer/F8631527/Solid_Curve_Snapping_Issue.blend)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-06-19 06:03:20 +02:00

I can confirm.
This is because the "Project onto Self" option is enabled.
The solution is to not snap to the generated geometry if this option is enabled.

I can confirm. This is because the `"Project onto Self"` option is enabled. The solution is to not snap to the generated geometry if this option is enabled.
Germano Cavalcante changed title from Solid Curve Snapping Issue to Problem snapping with "Project onto Self" on a curve with generated geometry 2020-06-19 06:08:01 +02:00

This issue was referenced by 7f1fd1818a

This issue was referenced by 7f1fd1818a3cadeba374cf513066e8380b0de9a1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77946
No description provided.