Fix T77946: Problem snapping with "Project onto Self" on a curve with generated geometry